--- a/my-first-react-app/index.html
+++ b/my-first-react-app/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="data:,">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Personal Portfolio</title>
     <script src="https://kit.fontawesome.com/71da1e9480.js" crossorigin="anonymous"></script>
